--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Reports are emerging from Opelousas, Louisiana, where residents say an 'Onion Gang' is marking mailboxes with raw onions in a strange crime ritual." />
+  <meta name="google-site-verification" content="IlaGRvdpO4TSsD9KYWW203TT5Ci_5wolPFmzOi7gDY0" />
   <title>'Onion Gang' Strikes Again in Opelousas</title>
   <style>
     body {
