--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Reports are emerging from Opelousas, Louisiana, where residents say an 'Onion Gang' is marking mailboxes with raw onions in a strange crime ritual." />
   <meta name="google-site-verification" content="IlaGRvdpO4TSsD9KYWW203TT5Ci_5wolPFmzOi7gDY0" />
-  <title>'Onion Gang' Strikes Again in Opelousas</title>
+ <title>'Onion Gang' Strikes Again in Opelousas</title>
   <style>
     body {
       font-family: Georgia, serif;
@@ -49,6 +49,39 @@
       max-width: 100%;
       margin: 1rem 0;
     }
+    .quote {
+      font-style: italic;
+      margin: 1rem 0;
+      color: #444;
+    }
+    .sidebar {
+      background: #f3f3f3;
+      border-left: 4px solid #ccc;
+      padding: 1rem;
+      margin-top: 2rem;
+    }
+    .ad {
+      background: #fff8e1;
+      border: 1px solid #d1a60c;
+      padding: 1rem;
+      margin: 2rem auto;
+      text-align: center;
+      font-family: Arial, sans-serif;
+    }
+    .ad h4 {
+      margin-bottom: 0.5rem;
+      font-size: 1.1rem;
+    }
+    .comments {
+      margin-top: 3rem;
+      border-top: 1px solid #ccc;
+      padding-top: 1rem;
+    }
+    .comment {
+      margin-bottom: 1rem;
+      padding-bottom: 0.5rem;
+      border-bottom: 1px solid #ddd;
+    }
     footer {
       text-align: center;
       background-color: #e6e6e6;
@@ -73,11 +106,38 @@
     <p class="byline">By Camille Robichaux | June 28, 2025</p>
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Onion_in_mailbox.jpg/640px-Onion_in_mailbox.jpg" alt="Onion left in mailbox">
     <p>Residents in the normally quiet town of Opelousas, Louisiana, are on edge after a string of bizarre incidents linked to a group dubbed the “Onion Gang.” According to multiple reports, unknown individuals have been leaving raw onions inside open mailboxes—a move that locals believe may signal future criminal targeting.</p>
-    <p>“I walked outside to check my mail and there it was—just one red onion sitting there. The box was wide open like they wanted me to see it,” said longtime resident Loretta Boudreaux. “I didn’t know what to do. I closed the mailbox and called the sheriff.”</p>
-    <p>The St. Landry Parish Sheriff's Office issued a brief statement Monday: "We are aware of reports of suspicious produce left in residential mailboxes. At this time, we cannot confirm any criminal intent. The matter is under review."
-    </p>
-    <p>This is not the first time Opelousas has dealt with vegetable-based intimidation. In 2017, a rash of sweet potato placements caused minor alarm in a neighboring parish. But experts say the onion has a more symbolic meaning. "Onions can represent layers and hidden agendas," said Dr. Charmaine Gautreaux, a folklorist at LSU-Eunice. “There’s an eerie undertone to this.”</p>
+    <p class="quote">“I walked outside to check my mail and there it was—just one red onion sitting there. The box was wide open like they wanted me to see it,” said longtime resident Loretta Boudreaux. “I didn’t know what to do. I closed the mailbox and called the sheriff.”</p>
+    <p>The St. Landry Parish Sheriff's Office issued a brief statement Monday: "We are aware of reports of suspicious produce left in residential mailboxes. At this time, we cannot confirm any criminal intent. The matter is under review."</p>
+    <p>This is not the first time Opelousas has dealt with vegetable-based intimidation. In 2017, a rash of sweet potato placements caused minor alarm in a neighboring parish. But experts say the onion has a more symbolic meaning. <span class="quote">"Onions can represent layers and hidden agendas," said Dr. Charmaine Gautreaux, a folklorist at LSU-Eunice. “There’s an eerie undertone to this.”</span></p>
     <p>Local officials urge residents not to touch any suspicious vegetables and to report incidents to law enforcement immediately.</p>
+
+    <div class="sidebar">
+      <h3>Related Stories</h3>
+      <ul>
+        <li><a href="#">Crawfish Shortage Prompts Panic Buying at Opelousas Market</a></li>
+        <li><a href="#">Residents Report Mysterious Tuba Sounds at Night</a></li>
+        <li><a href="#">Why Are All the Town's Squirrels Missing?</a></li>
+      </ul>
+    </div>
+
+    <div class="ad">
+      <h4>Sponsored: Thibodeaux's Tires & Bait</h4>
+      <p>“Where your truck and your tackle get tuned up!” — Off Hwy 190, across from the feed store.</p>
+      <small>thibodeauxsbaitnfix.biz</small>
+    </div>
+
+    <div class="comments">
+      <h3>Reader Comments</h3>
+      <div class="comment">
+        <strong>bayou_boy92:</strong> This is why I keep a flashlight and a fillet knife by the door. You never know.
+      </div>
+      <div class="comment">
+        <strong>gatorgirl45:</strong> My aunt got tagged with an onion last week. We thought it was a joke.
+      </div>
+      <div class="comment">
+        <strong>skeeterfan:</strong> Not the onions again. First the sweet potatoes, now this.
+      </div>
+    </div>
   </div>
   <footer>
     &copy; 2025 Acadia Parish Tribune | All Rights Reserved
