--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
     <h2>Acadia Parish Tribune</h2>
   </header>
   <nav>
-    <a href="#">Local</a>
-    <a href="#">Crime</a>
-    <a href="#">Weather</a>
-    <a href="#">Trending</a>
+    <a href="index.html">Local</a>
+    <a href="crime.html">Crime</a>
+    <a href="weather.html">Weather</a>
+    <a href="trending.html">Trending</a>
   </nav>
   <div class="container">
     <h1>'Onion Gang' Strikes Again in Opelousas</h1>
@@ -114,9 +114,9 @@
     <div class="sidebar">
       <h3>Related Stories</h3>
       <ul>
-        <li><a href="#">Crawfish Shortage Prompts Panic Buying at Opelousas Market</a></li>
-        <li><a href="#">Residents Report Mysterious Tuba Sounds at Night</a></li>
-        <li><a href="#">Why Are All the Town's Squirrels Missing?</a></li>
+        <li><a href="crawfish.html">Crawfish Shortage Prompts Panic Buying at Opelousas Market</a></li>
+        <li><a href="tuba.html">Residents Report Mysterious Tuba Sounds at Night</a></li>
+        <li><a href="squirrels.html">Why Are All the Town's Squirrels Missing?</a></li>
       </ul>
     </div>
 
